# SoQ_strategy_project

./: 20250419_analysis.ipynb  EDA.ipynb  Update_data.ipynb  app.py  pyproject.toml  separate_data.ipynb  strategy.ipynb
data/results/: anrew_lo_test.parquet  backtesting0.parquet  correlation_table.parquet  hurst_ci_data.csv  hurst_data.csv
strategy_project/: app.py
