[project]
name = "strategy-project"
version = "0.1.0"
description = ""
authors = [
    {name = "YV"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "hurst (>=0.0.5,<0.0.6)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tree (>=0.2.4,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"